@@ -45,14 +45,11 @@
   :profiles {:appassem {:aot :all}
              :snapshot {:git-version {:version-cmd "echo -snapshot"}}
              :dev
-             {:jvm-opts ["-Dlog4j.configurationFile=test-resources/log4j2.xml" "-Xms4g" "-Xmx12g" "-XX:+UseConcMarkSweepGC"]
-              :exclusions [org.slf4j/slf4j-log4j12
+             {:exclusions [org.slf4j/slf4j-log4j12
                            ch.qos.logback/logback-classic]
               :dependencies [[edu.stanford.nlp/stanford-corenlp "3.7.0" :classifier "javadoc"]
                              [edu.stanford.nlp/stanford-corenlp "3.7.0" :classifier "sources"]
                              [org.apache.logging.log4j/log4j-core "2.7"]
                              [org.apache.logging.log4j/log4j-slf4j-impl "2.7"]
                              [org.apache.logging.log4j/log4j-1.2-api "2.7"]
-                             [org.apache.logging.log4j/log4j-jcl "2.7"]
-                             [com.zensols.gui/tabres "0.0.6"]
-                             [com.zensols/clj-append "1.0.5"]]}})
+                             [org.apache.logging.log4j/log4j-jcl "2.7"]]}})
